<resources>
    <string name="app_name">Judge!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!--Nav Drawer Title-->
    <string name="nav_match_string">Match</string>
    <string name="nav_card_search_string">Card Search</string>
    <string name="nav_rulebook_string">Rulebook</string>
    <string name="nav_history_string">Match History</string>
    <string name="app_icon_description">Image of app icon</string>

    <!-- Strings related to Settings -->
    <string name="settings_menu_item">Settings</string>
    <string name="settings">Settings</string>

    <!--Card Query Logs-->


    <!--Match Settings-->
    <string name="match_settings_reset_title">Reset Settings</string>
    <string name="match_settings_reset_message">Are you sure you want to reset settings?</string>
    <string name="player1_increment_desc">Player 1 increment button</string>
    <string name="player1_decrement_desc">Player 1 decrement button</string>
    <string name="player2_increment_desc">Player 2 increment button</string>
    <string name="player2_decrement_desc">Player 2 decrement button</string>

    <string name="player1_energy_dec_desc">Player 1 energy decrement button</string>
    <string name="player1_energy_inc_desc">Player 1 energy increment button</string>
    <string name="player1_clue_inc_desc">Player 1 clue increment button</string>
    <string name="player1_clue_dec_desc">Player 1 clue decrement button</string>
    <string name="player1_poison_inc_desc">Player 1 poison increment button</string>
    <string name="player1_poison_dec_desc">Player 1 poison decrement button</string>

    <string name="player2_energy_dec_desc">Player 2 energy decrement button</string>
    <string name="player2_energy_inc_desc">Player 2 energy increment button</string>
    <string name="player2_clue_inc_desc">Player 2 clue increment button</string>
    <string name="player2_clue_dec_desc">Player 2 clue decrement button</string>
    <string name="player2_poison_inc_desc">Player 2 poison increment button</string>
    <string name="player2_poison_dec_desc">Player 2 poison decrement button</string>

    <string name="match_settings_title">Match Settings</string>

    <string name="player1_settings_title">Player 1</string>
    <string name="player1_life_key">player1_life</string>
    <string name="player1_life_settings_title">Life</string>
    <string name="player1_life_dialog_title">Life</string>
    <string name="player1_life_default_value">20</string>

    <string name="player1_color_key">player1_color</string>
    <string name="player1_color_settings_title">Color</string>
    <string name="player1_color_default_value">#9bd3ae</string>

    <string name="player2_settings_title">Player 2</string>
    <string name="player2_life_key">player2_life</string>
    <string name="player2_life_settings_title">Life</string>
    <string name="player2_life_dialog_title">Life</string>
    <string name="player2_life_default_value">20</string>

    <string name="player2_color_key">player2_color</string>
    <string name="player2_color_settings_title">Color</string>
    <string name="player2_color_default_value">#faaa8f</string>
    <string name="authentication_failed">Authentication failed.</string>

    <string name="player1_energy">player1_energy</string>
    <string name="player1_clue">player1_clue</string>
    <string name="player1_poison">player1_poison</string>

    <string name="player1_counters_key">player1_counters</string>
    <string name="player1_counters_title">Counters</string>

    <string name="player2_counters_key">player2_counters</string>
    <string name="player2_counters_title">Counters</string>

    <string name="player2_energy">player1_energy</string>
    <string name="player2_clue">player1_clue</string>
    <string name="player2_poison">player1_poison</string>
    <string name="energy_title">Energy</string>
    <string name="poison_title">Poison</string>
    <string name="clue_title">Clue</string>

    <string name="player1_energy_default_value">0</string>
    <string name="player1_clue_default_value">0</string>
    <string name="player1_poison_default_value">0</string>
    <string name="player2_energy_default_value">0</string>
    <string name="player2_clue_default_value">0</string>
    <string name="player2_poison_default_value">0</string>

    <string name="energy_settings_title">Energy</string>
    <string name="energy_dialog_title">Set Energy</string>
    <string name="clue_settings_title">Clues</string>
    <string name="clue_dialog_title">Set Clues</string>
    <string name="poison_settings_title">Poison</string>
    <string name="poison_dialog_title">Set Poison</string>

    <string name="player1_energy_key">player1_energy_key</string>
    <string name="player1_poison_key">player1_poison_key</string>
    <string name="player1_clue_key">player1_clue_key</string>

    <string name="player2_energy_key">player2_energy_key</string>
    <string name="player2_poison_key">player2_poison_key</string>
    <string name="player2_clue_key">player2_clue_key</string>

    <!--SearchFragment-->
    <string name="noInternet">No internet connection</string>
    <string name="empty">No cards found</string>
    <string name="no_results">NO RESULTS</string>
    <string name="card_detail_description">Large image of card</string>
    <string name="card_thumbnail_description">Thumbnail image of card</string>

    <!--DetailFragment-->
    <string name="detail_title">Card Details</string>
    <string name="image_not_found">Image not found.</string>


    <!--Search Settings-->
    <string name="search_settings_title">Card Search Settings</string>

    <!--Rulebook Settings-->
    <string name="rulebook_settings_title">RuleBook Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="pdf_broke">PDF file needs compatible viewer to open.</string>
    <string name="basic_button">Basic Rules</string>
    <string name="comprehensive_button">Comprehensive Rules</string>
    <string name="open_with">Open with:</string>
    <string name="open_path">application/pdf</string>
    <string name="start_failed">start activity failed.</string>

    <!--History Fragment-->
    <string name="history_title">Match History</string>
    <string name="history_empty">No match history.</string>
    <string name="player1_history_header_text">Player 1</string>
    <string name="player2_history_header_text">Player 2</string>
    <string name="history_reset_title">Delete Match History</string>
    <string name="history_reset_message">Are you sure you want to delete Match History?</string>
    <string name="history_header_icon">Icon for history fragment header.</string>
</resources>
