<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/match_settings_title">
    <PreferenceCategory
        android:title="@string/player1_settings_title"
        android:key="player1_match_settings">
        <EditTextPreference
            android:key="@string/player1_life_key"
            android:inputType="number"
            android:title="@string/player1_life_settings_title"
            android:dialogTitle="@string/player1_life_dialog_title"
            android:defaultValue="@string/player1_life_default_value"/>
        <SwitchPreference
            android:key="@string/player1_counters_key"
            android:title="@string/player1_counters_title"
            android:summary="Toggle Counters"/>
        <EditTextPreference
            android:key="@string/player1_energy_key"
            android:inputType="number"
            android:title="@string/energy_title"
            android:dialogTitle="@string/energy_dialog_title"
            android:defaultValue="@string/player1_energy_default_value"/>
        <EditTextPreference
            android:key="@string/player1_clue_key"
            android:inputType="number"
            android:title="@string/clue_title"
            android:dialogTitle="@string/clue_dialog_title"
            android:defaultValue="@string/player1_clue_default_value"/>
        <EditTextPreference
            android:key="@string/player1_poison_key"
            android:inputType="number"
            android:title="@string/poison_title"
            android:dialogTitle="@string/poison_dialog_title"
            android:defaultValue="@string/player1_poison_default_value"/>
        <ListPreference
            android:key="@string/player1_color_key"
            android:title="@string/player1_color_settings_title"
            android:entries="@array/colorEntries"
            android:entryValues="@array/colorValues"
            android:summary="%s"
            android:defaultValue="@string/player1_color_default_value">
        </ListPreference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/player2_settings_title"
        android:key="player2_match_settings">
        <EditTextPreference
            android:key="@string/player2_life_key"
            android:inputType="number"
            android:title="@string/player2_life_settings_title"
            android:dialogTitle="@string/player2_life_dialog_title"
            android:defaultValue="@string/player2_life_default_value"/>
        <SwitchPreference
            android:key="@string/player2_counters_key"
            android:title="@string/player2_counters_title"
            android:summary="Toggle Counters"/>
        <EditTextPreference
            android:key="@string/player2_energy_key"
            android:inputType="number"
            android:title="@string/energy_title"
            android:dialogTitle="@string/energy_dialog_title"
            android:defaultValue="@string/player2_energy_default_value"/>
        <EditTextPreference
            android:key="@string/player2_clue_key"
            android:inputType="number"
            android:title="@string/clue_title"
            android:dialogTitle="@string/clue_dialog_title"
            android:defaultValue="@string/player2_clue_default_value"/>
        <EditTextPreference
            android:key="@string/player2_poison_key"
            android:inputType="number"
            android:title="@string/poison_title"
            android:dialogTitle="@string/poison_dialog_title"
            android:defaultValue="@string/player2_poison_default_value"/>
        <ListPreference
            android:key="@string/player2_color_key"
            android:title="@string/player2_color_settings_title"
            android:entries="@array/colorEntries"
            android:entryValues="@array/colorValues"
            android:summary="%s"
            android:defaultValue="@string/player2_color_default_value">
        </ListPreference>
    </PreferenceCategory>

</PreferenceScreen>