<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/history_list_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:divider="?android:dividerHorizontal"
        android:showDividers="middle">
        <ImageView
            android:layout_width="0dp"
            android:src="@drawable/ic_colorize_black_24dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/history_header_icon"/>
        <TextView
            android:id="@+id/player1_history_header"
            android:layout_width="0dp"
            android:gravity="center"
            android:textSize="24sp"
            android:text="@string/player1_history_header_text"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
        <TextView
            android:id="@+id/player2_history_header"
            android:layout_width="0dp"
            android:gravity="center"
            android:textSize="24sp"
            android:text="@string/player2_history_header_text"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>
    <View
        android:id="@+id/history_fragment_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_alignBottom="@id/history_list_header" />
    <ListView
        android:id="@+id/history_listView"
        android:scrollbars="vertical"
        android:layout_below="@id/history_fragment_divider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/history_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_below="@id/history_fragment_divider"
        android:text="@string/history_empty"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_gravity="center"/>

</RelativeLayout>